apply plugin: 'com.android.application'
apply plugin: 'io.fabric'
apply plugin: 'me.tatarka.retrolambda'

buildscript {
    repositories {
        maven { url 'https://maven.fabric.io/public' }
    }

    dependencies {
        classpath 'io.fabric.tools:gradle:1.+'
    }
}

repositories {
    maven { url 'https://maven.fabric.io/public' }
}

android {
    compileSdkVersion 25
    buildToolsVersion "25.0.2"
    defaultConfig {
        applicationId "com.accountabilibuddies.accountabilibuddies"
        minSdkVersion 16
        targetSdkVersion 25
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
        vectorDrawables.useSupportLibrary = true
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    dataBinding {
        enabled true
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

def support_version = "25.3.1"

dependencies {
    compile fileTree(dir: 'libs', include: ['*.jar'])
    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
        exclude group: 'com.android.support', module: 'support-annotations'
    })
    compile('com.crashlytics.sdk.android:crashlytics:2.6.7@aar') {
        transitive = true;
    }

    compile "com.android.support:appcompat-v7:${support_version}"
    compile "com.android.support:support-v4:${support_version}"
    compile "com.android.support:design:${support_version}"
    compile "com.android.support:cardview-v7:${support_version}"
    compile 'com.mikhaellopez:circularimageview:3.0.2'

    compile 'com.android.support.constraint:constraint-layout:1.0.2'

    compile 'com.parse.bolts:bolts-android:1.4.0'
    compile 'com.parse:parse-android:1.14.1'
    compile 'com.parse:parseinterceptors:0.0.2'

    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
    compile 'com.parse:parsefacebookutils-v4-android:1.10.3@aar'

    testCompile 'junit:junit:4.12'

    compile 'com.jakewharton:butterknife:8.5.1'
    annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'

    compile 'com.google.android.gms:play-services-gcm:10.2.1'
    compile 'com.google.android.gms:play-services-maps:10.2.1'
    compile 'com.google.android.gms:play-services-location:10.2.1'

    compile 'com.github.clans:fab:1.6.4'
    compile 'com.github.bumptech.glide:glide:3.7.0'

    compile 'jp.wasabeef:glide-transformations:2.0.2'

    compile 'com.yqritc:android-scalablevideoview:1.0.4'

    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.0'
    compile 'com.borax12.materialdaterangepicker:library:1.9'
    compile 'com.wang.avi:library:2.1.3'

    compile 'commons-io:commons-io:2.5'

    compile 'com.github.shalskar:PeekAndPop:v1.0.1'
    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
    compile 'com.github.jd-alexander:LikeButton:0.2.0'

    compile 'com.afollestad.material-dialogs:core:0.9.4.4'
}
